# action_data_analysis

./: .cursorignore  .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: git-commit-conventional-agent.mdc  rule-format-always.mdc
.github/workflows/: ci.yml
clean/: README.md  step1.sh  step3_info.json
clean/step2/: batch_clean.sh  extract_zero_pairs.py  multisports_clean_extractor.py  readme.md  remove_tubes.sh  tactical_batch_multisports.py  tactical_multisports.py
clean/step2/test/: tactical.py  tactical_batch_test.py
clean/utils/: extract_zero_labels.py  vis.py
datasets/finesports/docs/: description.md
datasets/finesports/scripts/: README.md  convert_finesports_to_labelme.py  finesports_to_std.py  parse_annotations.py
datasets/multisports/scripts/: README.md  analyze_multisports.py  check_exported_tubes.py  count_games.py  (+6 more)
datasets/sportshhi/: README.md
docs/datasets/: standard_format.md
examples/: inspect_finesports_pkl.py  minimal.py
resnet_tactical_recgonition/: example.csv  find_missing_non_tactical.py  labels_dict.json  readme.md
resnet_tactical_recognition/: readme.md
scripts/: analyze_dirs.sh  analyze_folder.sh  analyze_overlaps_sportshhi.sh  commands.md  convert_sportshhi_to_labelme.sh  export_merged_samples.sh  export_merged_samples_finesports.sh  export_merged_samples_multisports.sh  export_merged_samples_sportshhi.sh  export_samples.sh  readme.md  stats.sh  visualize_samples.sh
src/: README.md
src/action_data_analysis/: __init__.py  core.py
tests/: sudden_changes_summary.json  test_core.py  test_sudden_changes.py
(+53 files in other folders)
