[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "action-data-analysis"
version = "0.1.0"
description = "Modern Python library template with AI collaboration rules"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.2",
  "pillow>=10",
  "opencv-python>=4.8",
]

[project.optional-dependencies]
dev  = ["ruff>=0.5","black>=24.4","pytest>=8.2","pytest-cov>=5","mypy>=1.10"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","B","UP"]
lint.fixable = ["ALL"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_unused_ignores = true
pretty = true